--- a/ShardingSphereDemo/src/main/resources/application_2.properties
+++ b/ShardingSphereDemo/src/main/resources/application_2.properties
@@ -21,10 +21,9 @@ spring.shardingsphere.datasource.ds1.username=root
 spring.shardingsphere.datasource.ds1.password=123456
 
 
-# ???????????
-spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=user_id
-spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=ds$->{user_id % 2}
-
+# ???? ?? user_id ????
+spring.shardingsphere.sharding.tables.product_order.database-strategy.inline.sharding-column=user_id
+spring.shardingsphere.sharding.tables.product_order.database-strategy.inline.algorithm-expression=ds$->{user_id % 2}
 spring.shardingsphere.sharding.tables.product_order.actual-data-nodes=ds$->{0..1}.product_order_$->{0..1}
 
 #???? ?? product_order_id ???????
@@ -33,12 +32,3 @@ spring.shardingsphere.sharding.tables.product_order.table-strategy.inline.shardi
 spring.shardingsphere.sharding.tables.product_order.table-strategy.inline.algorithm-expression=product_order_$->{id % 2}
 spring.shardingsphere.sharding.tables.product_order.keyGenerator.column=id
 spring.shardingsphere.sharding.tables.product_order.keyGenerator.type=SNOWFLAKE
-
-# ??product_order_item
-spring.shardingsphere.sharding.tables.product_order_item.actual-data-nodes=ds$->{0..1}.product_order_item_$->{0..1}
-spring.shardingsphere.sharding.tables.product_order_item.table-strategy.inline.sharding-column=product_order_id
-spring.shardingsphere.sharding.tables.product_order_item.table-strategy.inline.algorithm-expression=product_order_item_$->{product_order_id % 2}
-
-
-# ???
-spring.shardingsphere.sharding.binding-tables[0] = product_order,product_order_item
