--- a/ShardingSphereDemo/src/main/resources/application_binding_tables.properties
+++ b/ShardingSphereDemo/src/main/resources/application_binding_tables.properties
@@ -21,12 +21,18 @@ spring.shardingsphere.datasource.ds1.username=root
 spring.shardingsphere.datasource.ds1.password=123456
 
 
-# ??????
-spring.shardingsphere.sharding.default-database-strategy.standard.sharding-column=user_id
-spring.shardingsphere.sharding.default-database-strategy.standard.precise-algorithm-class-name=com.amber.sharding.algorithm.CustomDBPreciseShardingAlgorithm
+# ???????????
+spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=user_id
+spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=ds$->{user_id % 2}
 
 spring.shardingsphere.sharding.tables.product_order.actual-data-nodes=ds$->{0..1}.product_order_$->{0..1}
 
+#???? ?? product_order_id ???????
+# ??product_order???????????????????????
+spring.shardingsphere.sharding.tables.product_order.table-strategy.inline.sharding-column=id
+spring.shardingsphere.sharding.tables.product_order.table-strategy.inline.algorithm-expression=product_order_$->{id % 2}
+spring.shardingsphere.sharding.tables.product_order.keyGenerator.column=id
+spring.shardingsphere.sharding.tables.product_order.keyGenerator.type=SNOWFLAKE
 
 # ??product_order_item
 spring.shardingsphere.sharding.tables.product_order_item.actual-data-nodes=ds$->{0..1}.product_order_item_$->{0..1}
@@ -35,9 +41,3 @@ spring.shardingsphere.sharding.tables.product_order_item.table-strategy.inline.a
 
 # ???
 spring.shardingsphere.sharding.binding-tables[0] = product_order,product_order_item
-
-# ??????
-spring.shardingsphere.sharding.tables.product_order.table-strategy.standard.shardingColumn=id
-spring.shardingsphere.sharding.tables.product_order.table-strategy.standard.preciseAlgorithmClassName=com.amber.sharding.algorithm.CustomPreciseShardingAlgorithm
-spring.shardingsphere.sharding.tables.product_order.keyGenerator.column=id
-spring.shardingsphere.sharding.tables.product_order.keyGenerator.type=SNOWFLAKE
